# Grammer-Autocorrector

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
data/: prompt_registry.json
data/sample/: grammar_rules.txt  sample_sentences.txt
docs/: SDD.md  SRS.md  api_reference.md  architecture.md  deployment_guide.md  known_issues.md  testing_plan.md  user_guide.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: APIHealthCheck.tsx  ChangeList.tsx  CorrectionResult.tsx  FuturisticBackground.tsx  Navbar.tsx  StatusPill.tsx  TextCorrectionForm.tsx
frontend/lib/: api.ts  types.ts
notebooks/: 01_data_exploration.ipynb  02_t5_finetuning.ipynb  03_bert_evaluation.ipynb  04_rag_pipeline_demo.ipynb
results/: evaluation_report.md  performance_profile.md
results/data_audit/: bias_report.md  data_audit_report.md  dataset_summary.json
results/data_preparation/: bert_token_label_summary.json  class_distribution_before_after.csv  sprint8_data_preparation_report.md
scripts/: data_audit.py  download_data.py  evaluate.py  prepare_training_data.py  profile_pipeline.py  train_bert.py  train_t5.py
src/: __init__.py
src/api/: __init__.py  app.py  routes.py  runtime.py  schemas.py
src/models/: __init__.py  bert_detector.py  rnn_baseline.py  t5_corrector.py
src/pipeline/: __init__.py  correction_pipeline.py  guardrails.py  prompt_versioning.py  (+1 more)
tests/: __init__.py
(+20 files in other folders)
